--- a/apps/website/src/layouts/BlogPostLayout.astro
+++ b/apps/website/src/layouts/BlogPostLayout.astro
@@ -18,8 +18,8 @@ const {
 } = Astro.props;
 const canonicalURL = canonicalUrl
   ? new URL(canonicalUrl)
-  : Astro.request.canonicalURL;
-const siteName = Astro.request.canonicalURL.hostname;
+  : Astro.canonicalURL;
+const siteName = Astro.canonicalURL.hostname;
 const title = `${pageTitle} | ${siteName}`;
 ---
 
@@ -40,7 +40,7 @@ const title = `${pageTitle} | ${siteName}`;
   <body
     class="min-h-screen w-screen bg-white flex flex-col font-mono text-white selection:bg-cyan-700 selection:text-white overflow-x-hidden"
   >
-    <Header currentPage={Astro.request.url.pathname} />
+    <Header currentPage={Astro.request.url} />
 
     <main class="flex flex-1">
       <slot />
