--- a/apps/website/src/pages/blog/index.astro
+++ b/apps/website/src/pages/blog/index.astro
@@ -6,9 +6,7 @@ const title = 'Blog';
 const description =
   'My blog with articles about web development and programming in general.';
 
-const posts = Astro.fetchContent('../../blog-posts/*.md').sort(
-  (a, b) => new Date(b.date).valueOf() - new Date(a.date).valueOf()
-);
+const posts = await Astro.glob('../../blog-posts/*.md')
 ---
 
 <Layout
@@ -17,5 +15,5 @@ const posts = Astro.fetchContent('../../blog-posts/*.md').sort(
   socialImage="/assets/blog-leosvel.dev.png"
   socialImageAlt="Leosvel's blog social image"
 >
-  <Blog {description} {posts} />
+  <Blog {description} {posts}  />
 </Layout>
